ssu_score/STD_DIR/20190008/13.error
STD_DIR/20190008/13.c:6:35: error: expected ';' after top level declarator
void ssu_signal_handler(int signo)
                                  ^
                                  ;
1 error generated.
sh: 1: command not found
sh: line 1: /13.error: No such file or directory
